--- a/html/extension.html
+++ b/html/extension.html
@@ -71,7 +71,7 @@
         </section>
         <!--平台公告-->
         <section class="my-notice">
-            <p class="my-notice-text1"><b><img src="../images/notice.png" alt="">平台公告</b></p>
+            <p class="my-notice-text1"><b><!--<img src="../images/notice.png" alt="">-->平台公告</b></p>
             <div class="scroll-list">
                 <ul id="scroll-list-ul">
                     {{#each notices}}
