--- a/html/commodity.html
+++ b/html/commodity.html
@@ -104,9 +104,9 @@
             </div>
             <div class="dis-list-content">
                 <div class="dis-shop-detail">
-                    <span>红包{{productHongbao}}元</span>
-                    <span>{{exemption isServenBack}}</span>
-                    <span>{{name}}</span>
+                    <span class="hongbao">红包{{productHongbao}}元</span>
+                    <span class="is-baoyou">{{exemption isServenBack}}</span>
+                    <span class="shop-list-name">{{name}}</span>
                 </div>
                 <div class="dis-price">
                     <span>￥{{productPrice}}</span>
