--- a/html/wxmass.html
+++ b/html/wxmass.html
@@ -132,10 +132,11 @@
     </section>
 </section>
 <script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/common.js"></script>
 <script>
     $('.wxmass-list-li').click(function () {
         $('.wxmass-sends').toggle()
-    })
+    });
     $('.cancel').click(function () {
         $('.wxmass-sends').toggle()
     })
