--- a/html/transuccess.html
+++ b/html/transuccess.html
@@ -29,34 +29,8 @@
         <div class="aui-tab-item my-aui-tab-item"><a href="tranfail.html">交易失败</a></div>
     </div>
     <div id="dis-list-vessel">
-<<<<<<< HEAD
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                        <div class="dis-sale">
-                            <span>交易成功</span>
-                        </div>
 
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
+        <!--<a href="javascript:;" class="display-box">
             <div class="dis-list-box">
                 <div class="dis-shop-img">
                     <img src="../images/22.jpg" alt="">
@@ -78,141 +52,13 @@
                     <div class="dis-sale">
                         <span>交易成功</span>
                     </div>
-
                 </div>
             </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>交易成功</span>
-                    </div>
-
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>交易成功</span>
-                    </div>
-
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>交易成功</span>
-                    </div>
-
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>交易成功</span>
-                    </div>
-
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>交易成功</span>
-                    </div>
-=======
->>>>>>> 5f5a005ea8e03450d45ca95f4275682b025b1c7c
-
+        </a>-->
     </div>
 </section>
+<div class="loading">加载更多...</div>
+<div class="no-info">没有更多信息了...</div>
 <!--我的分享-->
 <section class="my-share">
     <ul>
@@ -237,13 +83,12 @@
     </ul>
     <div class="my-share-del1"><img src="../images/del1.png" alt=""></div>
 </section>
-<<<<<<< HEAD
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/api.2.0.js"></script>
 <script src="../js/common.js"></script>
-=======
+
 <script type="text/x-handlebars-template" id="transuccess-template">
-    {{#each data}}
+    {{#each products}}
     <a href="goodsdetail.html?productsId={{id}}" class="display-box">
         <div class="dis-list-box">
             <div class="dis-shop-img">
@@ -251,9 +96,9 @@
             </div>
             <div class="dis-list-content">
                 <div class="dis-shop-detail">
-                    <span>红包{{productHongbao}}元</span>
-                    <span>{{exemption isServenBack}}</span>
-                    <span>{{name}}</span>
+                    <span class="hongbao">红包{{productHongbao}}元</span>
+                    <span class="is-baoyou">{{exemption isServenBack}}</span>
+                    <span class="shop-list-name">{{name}}</span>
                 </div>
                 <div class="dis-price">
                     <span>优惠价:{{productPrice}}</span>
@@ -276,50 +121,7 @@
 <script src="../js/handlebars-v4.0.10.js"></script>
 <script src="../js/config.js"></script>
 <script src="../js/common.js"></script>
->>>>>>> 5f5a005ea8e03450d45ca95f4275682b025b1c7c
-<script>
-    $(document).ready(function () {
-        /*筛选按钮的切换*/
-        $('.dis-screen-btn').click(function () {
-            $('.dis-screen').toggle();
-        });
-        /*分享店铺*/
-        $('.clickshare').click(function () {
-            $('.my-share').toggle();
-        });
-        /*点击x按钮关闭店铺分享*/
-        $('.my-share-del1').click(function () {
-            $('.my-share').toggle();
-        });
-    });
-
-    var a = $('#transuccess-template').html();
-    var b = Handlebars.compile(a);
-
-    $.ajax({
-        url: C.marketInterface.transuccess,
-        type: 'POST',
-        dataType: 'json',
-        data: {
-            token: C.marketToken,
-            orderType: '1'
-        },
-        success: function (data) {
-            if (data.result == 'success') {
-                $('#dis-list-vessel').html(b(data))
-            } else if (data.result == 'login') {
-                alert(data.errorMsg)
-            } else {
-                alert(data.errorMsg)
-            }
-        },
-        error: function () {
-            alert('服务器异常')
-        }
-    })
-
-
-</script>
+<script src="../js/transuccess.js"></script>
 
 </body>
 </html>
