--- a/html/my.html
+++ b/html/my.html
@@ -90,8 +90,6 @@
         </ul>
     </div>
 
-
-
 <footer class="aui-bar aui-bar-tab" id="footer">
     <a href="index.html">
         <div class="aui-bar-tab-item" tapmode>
@@ -120,6 +118,7 @@
 </footer>
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/config.js"></script>
+<script src="../js/function.js"></script>
 <script src="../js/handlebars-v4.0.10.js"></script>
 <script>
     var a=$('#my-template').html();
@@ -140,7 +139,12 @@
                 //console.log(data);
                 $('#my-box1').html(b(data));
             }else if(data.result=='login'){
-                alert('登录过期，请重新登录');
+                var ua = navigator.userAgent.toLowerCase();
+                if (/iphone|ipad|ipod/.test(ua)) {
+                    iosIsLogin();
+                } else {
+                    androidIsToken();
+                }
             }else {
                 alert(data.errorMsg);
             }
