--- a/html/index.html
+++ b/html/index.html
@@ -80,7 +80,7 @@
             </div>
         </div>
     </div>-->
-
+    <div class="get-token"></div>
     <div id="tab1" class="tabList">
         <!--<div class="home-three">
             <a href="javascript:;" class="display-box">
@@ -213,5 +213,12 @@
 <!--<script src="../js/tab.js"></script>-->
 <script src="../js/aui-slide.js"></script>
 <script src="../js/index.js"></script>
+<script>
+
+
+
+
+
+</script>
 </body>
 </html>
