--- a/html/commodity.html
+++ b/html/commodity.html
@@ -18,11 +18,11 @@
         <div class="aui-searchbar-input aui-border-radius">
             <i class="aui-iconfont aui-icon-search"></i>
             <input type="search" placeholder="请输入搜索内容" id="search-input">
-            <div class="aui-searchbar-clear-btn">
+            <div class="aui-searchbar-clear-btn" id="clean-search">
                 <i class="aui-iconfont aui-icon-close"></i>
             </div>
         </div>
-        <div class="aui-searchbar-btn" tapmode>取消</div>
+        <div class="aui-searchbar-btn aui-text-info" tapmode>搜索</div>
     </div>
 </header>
 
